--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,20 @@
 camel.springboot.name=MyCamel
 camel.springboot.main-run-controller=true
 
-# Artemis
-spring.artemis.mode=embedded
-spring.artemis.embedded.enabled=true
-spring.artemis.embedded.queues=quickstart-messages
-spring.artemis.embedded.persistent=true
+# ActiveMQ
+spring.activemq.broker-url=tcp://broker-amq-tcp:61616
+spring.activemq.user=
+spring.activemq.password=
 
 # Database
-spring.datasource.url=jdbc:h2:file:./target/quickstart-database
+spring.datasource.url=jdbc:postgresql://narayana-database:5432/narayana
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 # TX manager
-spring.jta.log-dir=./target/tx-object-store
+spring.jta.transaction-manager-id=txman
+spring.jta.log-dir=/var/transaction/data
 spring.jta.narayana.periodic-recovery-period=2
 spring.jta.narayana.recovery-backoff-period=1
 spring.jta.narayana.default-timeout=300
