--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,14 @@ spring.activemq.password=
 
 # Database
 spring.datasource.url=jdbc:postgresql://narayana-database:5432/narayana
+# User/pass overridden in Openshift
 spring.datasource.username=
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
 
 # TX manager
 spring.jta.transaction-manager-id=txman
-spring.jta.log-dir=/var/transaction/data
-spring.jta.narayana.periodic-recovery-period=2
-spring.jta.narayana.recovery-backoff-period=1
-spring.jta.narayana.default-timeout=300
+# Log dir overridden in Openshift
+spring.jta.log-dir=./target/txstore
 
 # Logging
 logging.level.com.arjuna=INFO
