--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,8 @@
 		<!-- configure the versions you want to use here -->
 		<fabric8.version>2.3.1</fabric8.version>
 		<spring-boot.version>1.4.1.RELEASE</spring-boot.version>
-		<!--<narayana.version>5.3.4.Final</narayana.version>-->
-		<narayana.version>5.6.3.Final</narayana.version>
-		<jboss-transaction.version>7.6.0.Final</jboss-transaction.version>
+		<narayana.version>5.5.30.Final-redhat-1</narayana.version>
+		<jboss-transaction.version>7.6.0.Final-redhat-1</jboss-transaction.version>
 
 		<!-- maven plugin versions -->
 		<fabric8.maven.plugin.version>3.3.5</fabric8.maven.plugin.version>
