--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,5 @@ spring.jta.transaction-manager-id=txman
 spring.jta.log-dir=./target/txstore
 
 # Logging
-logging.level.com.arjuna=INFO
+logging.level.com.arjuna=DEBUG
+debug=true
